RESOLVED FIXED 251707
REGRESSION (iOS 16): sina.cn: Find on Page highlights obscure the text behind them
https://bugs.webkit.org/show_bug.cgi?id=251707
Summary REGRESSION (iOS 16): sina.cn: Find on Page highlights obscure the text behind...
Aditya Keerthi
Reported 2023-02-03 11:32:49 PST
Attachments
Aditya Keerthi
Comment 1 2023-02-03 12:04:56 PST
EWS
Comment 2 2023-02-04 11:58:10 PST
Committed 259857@main (ed56087035ea): <https://commits.webkit.org/259857@main> Reviewed commits have been landed. Closing PR #9618 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.